Scrolling functionality in long description text.

--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,9 @@
             line-height: 1.5;
             flex-grow: 1;
             margin-bottom: 1rem;
+            max-height: calc(0.95rem * 1.5 * 3);
+            overflow-y: auto;
+            flex-shrink: 0;
         }
 
         .app-card.expanded .app-description {
